plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21) // or 21 if you're using the latest
    }
}


group 'com.OOD.Group1'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.ood.groupOne.card_guessing_game.HelloApplication'
}

javafx {
    version = '21.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'org.openjfx:javafx-controls:21.0.6'
    implementation 'org.openjfx:javafx-fxml:21.0.6'
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}

run {
    doFirst {
        // Remove the --module-path and --add-modules JVM args
        jvmArgs = [
                "--module-path", "C:/Program Files/Java/openjfx-21.0.6_windows-x64_bin-sdk/javafx-sdk-21.0.6/lib",
                "--add-modules", "javafx.controls,javafx.fxml"
        ]
    }
}

